--- a/po/fr.po
+++ b/po/fr.po
@@ -2,14 +2,15 @@
 # Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Olivier Fourdan <fourdan@xfce.org>, 2004.
+# Collet Etienne <xanaxlnx@gmail.com>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.24\n"
+"Project-Id-Version: xfce4-panel 4.3.25\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-10-21 20:54+0900\n"
-"PO-Revision-Date: 2005-09-29 20:28+0900\n"
-"Last-Translator: Olivier Fourdan <fourdan@xfce.org>\n"
+"POT-Creation-Date: 2005-10-29 16:58+0900\n"
+"PO-Revision-Date: 2005-10-29 16:37+0900\n"
+"Last-Translator: Collet Etienne <xanaxlnx@gmail.com>\n"
 "Language-Team: French <traduc@traduc.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,46 +19,44 @@ msgstr ""
 #: ../libxfce4panel/xfce-panel-external-item.c:171
 #, c-format
 msgid "An item was unexpectedly removed: \"%s\"."
-msgstr ""
+msgstr "L'élément a été inopinément enlevé : \"%s\"."
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:581
-#, fuzzy, c-format
+#, c-format
 msgid "Remove \"%s\"?"
-msgstr "_Supprimer"
+msgstr "Supprimer \"%s\"?"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:586 ../panel/panel-app.c:568
-#: ../panel/panel-app.c:599 ../panel/panel-app.c:632
-#: ../panel/panel-settings.c:1604 ../plugins/launcher/launcher.c:313
-#: ../plugins/launcher/launcher.c:361
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:586 ../panel/panel-app.c:597
+#: ../panel/panel-app.c:628 ../panel/panel-app.c:661
+#: ../panel/panel-settings.c:1613 ../plugins/launcher/launcher.c:314
+#: ../plugins/launcher/launcher.c:364
 msgid "Xfce Panel"
 msgstr "Panneau Xfce"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:588
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
-msgstr ""
+msgstr "L'élément sera enlevé du panneau et sa configuration sera perdue."
 
 #. configure, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:759
-#, c-format
+#, fuzzy, c-format
 msgid "%s Properties"
-msgstr ""
+msgstr "Propriétés"
 
 #. about item, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:778
 msgid "About"
-msgstr ""
+msgstr "A propos"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:799
-#, fuzzy
 msgid "Remove"
-msgstr "_Supprimer"
+msgstr "Supprimer"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:814
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:850
-#, fuzzy
 msgid "Panel"
-msgstr "Panneau Xfce"
+msgstr "Panneau"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:820 ../panel/panel.c:534
 msgid "Customize Panel"
@@ -66,35 +65,32 @@ msgstr ""
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:837
 #, fuzzy
 msgid "Manage Panels"
-msgstr "Panneau Xfce"
+msgstr "Contrôle Des Éléments Du Panneau"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:850
 #, fuzzy, c-format
 msgid "Remove %s"
-msgstr "_Supprimer"
+msgstr "Supprimer \"%s\"?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:867
 #: ../panel/panel-settings.c:412
-#, fuzzy
 msgid "New Panel"
-msgstr "Panneau Xfce"
+msgstr "Nouveau Panneau"
 
 #: ../panel/panel.c:549 ../plugins/actions/actions.c:332
 msgid "Quit"
-msgstr ""
+msgstr "Quitter"
 
 #: ../panel/panel.c:559
-#, fuzzy
 msgid "Restart"
-msgstr "_Redémarrer"
+msgstr "Redémarrer"
 
 #: ../panel/panel.c:573
-#, fuzzy
 msgid "About the Xfce Panel"
-msgstr "Panneau Xfce"
+msgstr "A-propos du Panneau Xfce"
 
 #: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
-#, fuzzy, c-format
+#, c-format
 msgid "Could not open \"%s\" module"
 msgstr "Impossible de créer l'élément du panneau \"%s\"."
 
@@ -102,30 +98,31 @@ msgstr "Impossible de créer l'élément du panneau \"%s\"."
 msgid "Are you sure you want to exit?"
 msgstr "Êtes-vous sûr de vouloir quitter ?"
 
-#: ../panel/panel-app.c:570
-#, fuzzy
+#: ../panel/panel-app.c:599
 msgid "Exit Xfce Panel?"
-msgstr "Panneau Xfce"
+msgstr "Quitter le Panneau Xfce"
 
-#: ../panel/panel-app.c:571
+#: ../panel/panel-app.c:600
 msgid "You can't remove the last panel. Would you like to exit the program?"
 msgstr ""
+"Vous ne pouvez pas enlever le dernier panneau. voulez-vous sortir du "
+"programme?"
 
-#: ../panel/panel-app.c:597
+#: ../panel/panel-app.c:626
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr ""
+msgstr "Supprimer le Panneau \"%d\"?"
 
-#: ../panel/panel-app.c:601
+#: ../panel/panel-app.c:630
 msgid "The selected panel and all its items will be removed."
-msgstr ""
+msgstr "Le panneau choisi et tous ses élément seront suprimé."
 
-#: ../panel/panel-app.c:640
+#: ../panel/panel-app.c:669
 msgid "Developer"
-msgstr ""
+msgstr "Développeur"
 
 #: ../panel/main.c:46
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " Xfce Panel %s\n"
@@ -152,6 +149,8 @@ msgid ""
 " Usage: %s [OPTIONS]\n"
 "\n"
 msgstr ""
+"-Utilisation:-%s-[OPTIONS]\n"
+"\n"
 
 #. Only translate the descriptions, not the options itself
 #: ../panel/main.c:55
@@ -167,172 +166,176 @@ msgid ""
 " -a, --add       Add new items\n"
 "\n"
 msgstr ""
+" OPTIONS\n"
+" -h, --help      Montrer les options\n"
+" -v, --version   Montrer les options\n"
+" -c, --customize Montrez la fenêtre de configuration\n"
+" -s, --save      Sauver la confiquration du panneaux\n"
+" -r, --restart   Relancer les panneux\n"
+" -q, --quit      Fin de la session\n"
+" -x, --exit      Fermer les panneaux\n"
+" -a, --add       Ajouter un nouveau élément\n"
+"\n"
 
 #: ../panel/panel-settings.c:331 ../panel/panel-settings.c:367
 #: ../panel/panel-settings.c:399
 #, fuzzy, c-format
 msgid "Panel %d"
-msgstr "Panneau Xfce"
+msgstr "Panneau"
 
 #: ../panel/panel-settings.c:383
 #, fuzzy
 msgid "Select Panel"
-msgstr "Sélection de fichier"
+msgstr "Ajoutez Au Panneau Sélectionné"
 
 #: ../panel/panel-settings.c:419
 #, fuzzy
 msgid "Remove Panel"
-msgstr "_Supprimer"
+msgstr "Supprimer le Panneau \"%d\"?"
 
-#: ../panel/panel-settings.c:706 ../panel/panel-settings.c:914
+#: ../panel/panel-settings.c:708 ../panel/panel-settings.c:916
 msgid "Left"
 msgstr ""
 
-#: ../panel/panel-settings.c:708 ../panel/panel-settings.c:916
+#: ../panel/panel-settings.c:710 ../panel/panel-settings.c:918
 msgid "Right"
 msgstr ""
 
-#: ../panel/panel-settings.c:713 ../panel/panel-settings.c:921
+#: ../panel/panel-settings.c:715 ../panel/panel-settings.c:923
 msgid "Top"
 msgstr ""
 
-#: ../panel/panel-settings.c:715 ../panel/panel-settings.c:923
+#: ../panel/panel-settings.c:717 ../panel/panel-settings.c:925
 msgid "Bottom"
 msgstr ""
 
 #. floating?
-#: ../panel/panel-settings.c:747
-#, fuzzy
+#: ../panel/panel-settings.c:749
 msgid "Panel Type"
-msgstr "Taille du panneau: "
-
-#: ../panel/panel-settings.c:756
-#, fuzzy
-msgid "Fixed Position"
-msgstr "Position"
+msgstr "Type de panneau"
 
 #: ../panel/panel-settings.c:758
+msgid "Fixed Position"
+msgstr "Position fixe"
+
+#: ../panel/panel-settings.c:760
 msgid "Freely Moveable"
-msgstr ""
+msgstr "position mobile"
 
 #. position
-#: ../panel/panel-settings.c:764
+#: ../panel/panel-settings.c:766
 msgid "Position"
 msgstr "Position"
 
-#: ../panel/panel-settings.c:848
+#: ../panel/panel-settings.c:850
 msgid "_Full Width"
-msgstr ""
+msgstr "Pleine Largeur"
 
-#: ../panel/panel-settings.c:857
-#, fuzzy
+#: ../panel/panel-settings.c:859
 msgid "Auto_hide"
 msgstr "Masquer automatiquement"
 
-#: ../panel/panel-settings.c:875
-#, fuzzy
+#: ../panel/panel-settings.c:877
 msgid "Orientation:"
 msgstr "Orientation du panneau :"
 
-#: ../panel/panel-settings.c:887
+#: ../panel/panel-settings.c:889
 msgid "Horizontal"
 msgstr "Horizontal"
 
-#: ../panel/panel-settings.c:889
+#: ../panel/panel-settings.c:891
 msgid "Vertical"
 msgstr "Vertical"
 
-#: ../panel/panel-settings.c:898
+#: ../panel/panel-settings.c:900
 #, fuzzy
 msgid "Handle Position:"
-msgstr "Position"
+msgstr "Position fixe"
 
-#: ../panel/panel-settings.c:910
-#, fuzzy
+#: ../panel/panel-settings.c:912
 msgid "At both sides"
-msgstr "Masquer automatiquement"
+msgstr "Sur les deux côtés"
 
-#: ../panel/panel-settings.c:940
+#: ../panel/panel-settings.c:942
 #, fuzzy
 msgid "Panel Properties"
-msgstr "Paramétrage du panneau"
+msgstr "Propriétés"
 
-#: ../panel/panel-settings.c:975
-#, fuzzy
+#: ../panel/panel-settings.c:977
 msgid "Monitor"
-msgstr "Éditeur"
+msgstr "Moniteur"
 
 #. size
-#: ../panel/panel-settings.c:1057
+#: ../panel/panel-settings.c:1059
 msgid "Size"
 msgstr "Taille"
 
-#: ../panel/panel-settings.c:1068
+#: ../panel/panel-settings.c:1070
 msgid "Small"
 msgstr "Petit"
 
-#: ../panel/panel-settings.c:1085
+#: ../panel/panel-settings.c:1087
 msgid "Large"
 msgstr "Grand"
 
-#: ../panel/panel-settings.c:1099
+#: ../panel/panel-settings.c:1101
 msgid "Transparency"
-msgstr ""
+msgstr "Transparence"
 
-#: ../panel/panel-settings.c:1107
+#: ../panel/panel-settings.c:1109
 msgid "None"
-msgstr ""
+msgstr "Aucune"
 
-#: ../panel/panel-settings.c:1124
+#: ../panel/panel-settings.c:1126
 msgid "Full"
-msgstr ""
+msgstr "Total"
 
-#: ../panel/panel-settings.c:1440
+#: ../panel/panel-settings.c:1442
 msgid "Manage Panel Items"
-msgstr ""
+msgstr "Contrôle Des Éléments Du Panneau"
 
-#: ../panel/panel-settings.c:1461
+#: ../panel/panel-settings.c:1463
+#, fuzzy
 msgid ""
 "Drag items from the list to a panel or remove them by dragging them back to "
 "the list."
 msgstr ""
+"Ajouter ou enlever les éléments de la liste d'un panneau ou déplacez les "
+"éléments existants à un nouvel endroit."
 
-#: ../panel/panel-settings.c:1479
+#: ../panel/panel-settings.c:1481
 msgid "Avalaible Items"
-msgstr ""
+msgstr "Éléments ajoutable"
 
-#: ../panel/panel-settings.c:1492
+#: ../panel/panel-settings.c:1494
 msgid "Add To Selected Panel"
-msgstr ""
+msgstr "Ajoutez Au Panneau Sélectionné"
 
-#: ../panel/panel-settings.c:1651
+#: ../panel/panel-settings.c:1662
 msgid "Panel Preferences"
-msgstr ""
+msgstr "Préférences des panneaux"
 
-#: ../panel/panel-settings.c:1653
+#: ../panel/panel-settings.c:1664
 msgid "Customize Panels"
 msgstr ""
 
-#: ../plugins/launcher/launcher.c:311 ../plugins/launcher/launcher.c:359
-#, fuzzy, c-format
+#: ../plugins/launcher/launcher.c:312 ../plugins/launcher/launcher.c:362
+#, c-format
 msgid "Could not run \"%s\""
-msgstr "Impossible de créer l'élément du panneau \"%s\"."
+msgstr "Impossible de lancer \"%s\"."
 
-#: ../plugins/launcher/launcher.c:557
-#: ../plugins/launcher/launcher-dialog.c:1118
-#, fuzzy
+#: ../plugins/launcher/launcher.c:560
+#: ../plugins/launcher/launcher-dialog.c:1121
 msgid "New Item"
-msgstr "Ajouter une entrée"
+msgstr "Ajouter un élément"
 
-#: ../plugins/launcher/launcher.c:613 ../plugins/launcher/launcher.c:1127
-#, fuzzy
+#: ../plugins/launcher/launcher.c:616 ../plugins/launcher/launcher.c:1131
 msgid "This item has not yet been configured"
-msgstr "Cette entrée n'a pas d'option de configuration"
+msgstr "Cette élément n'a pas d'option de configuration"
 
-#: ../plugins/launcher/launcher.c:1126
-#, fuzzy
+#: ../plugins/launcher/launcher.c:1130
 msgid "New item"
-msgstr "Ajouter une entrée"
+msgstr "Ajouter un nouveau élément"
 
 #: ../plugins/launcher/launcher-dialog.c:78
 msgid "Default"
@@ -387,62 +390,58 @@ msgid "Terminal"
 msgstr "Terminal"
 
 #: ../plugins/launcher/launcher-dialog.c:381
-#, fuzzy
 msgid "Select image file"
-msgstr "Sélection de fichier"
+msgstr "Sélection une image"
 
 #: ../plugins/launcher/launcher-dialog.c:426
 msgid "Select command"
 msgstr "Sélection de la commande"
 
 #: ../plugins/launcher/launcher-dialog.c:449
-#, fuzzy
 msgid "Name"
-msgstr "Jeux"
+msgstr "Nom"
 
 #: ../plugins/launcher/launcher-dialog.c:467
-#, fuzzy
 msgid "Description"
-msgstr "Position"
+msgstr "Descrpition"
 
 #: ../plugins/launcher/launcher-dialog.c:522
 msgid "Other..."
-msgstr ""
+msgstr "Autre..."
 
-#: ../plugins/launcher/launcher-dialog.c:605
-#, fuzzy
+#: ../plugins/launcher/launcher-dialog.c:608
 msgid "Command"
-msgstr "Commande :"
+msgstr "Commande"
 
-#: ../plugins/launcher/launcher-dialog.c:641
+#: ../plugins/launcher/launcher-dialog.c:644
 msgid "Run in _terminal"
 msgstr "Exécuter dans un _terminal"
 
-#: ../plugins/launcher/launcher-dialog.c:659
-#, fuzzy
+#: ../plugins/launcher/launcher-dialog.c:662
 msgid "Use _startup notification"
 msgstr "Utiliser la _notification de démarrage"
 
-#: ../plugins/launcher/launcher-dialog.c:1230
+#: ../plugins/launcher/launcher-dialog.c:1233
 msgid ""
 "The first item in the list is shown on the panel. Additional items will "
 "appear in a menu."
 msgstr ""
+"Le premier élément dans la liste est montré sur le panneau. Les éléments "
+"additionnels apparaîtront dans un menu."
 
-#: ../plugins/launcher/launcher-dialog.c:1270
+#: ../plugins/launcher/launcher-dialog.c:1273
 #: ../plugins/separator/separator.c:241 ../plugins/actions/actions.c:295
 #: ../plugins/tasklist/tasklist.c:320 ../plugins/pager/pager.c:275
 #: ../plugins/systray/systray.c:345 ../plugins/iconbox/iconbox.c:748
 #: ../plugins/clock/clock.c:401
 msgid "Properties"
-msgstr ""
+msgstr "Propriétés"
 
-#: ../plugins/launcher/launcher-dialog.c:1279
-#, fuzzy
+#: ../plugins/launcher/launcher-dialog.c:1282
 msgid "Program Launcher"
-msgstr "Associer un menu au lanceur"
+msgstr "Lanceur De Programme"
 
-#: ../plugins/launcher/launcher-dialog.c:1605
+#: ../plugins/launcher/launcher-dialog.c:1608
 msgid "Select file"
 msgstr "Sélection de fichier"
 
@@ -452,40 +451,34 @@ msgid "Separator"
 msgstr "Séparation"
 
 #: ../plugins/separator/separator.c:266
-#, fuzzy
 msgid "_Draw Separator"
 msgstr "Séparation"
 
 #: ../plugins/separator/separator.c:275
 msgid "_Expand"
-msgstr ""
+msgstr "_Augmentez"
 
 #: ../plugins/actions/actions.c:307
 #: ../plugins/actions/actions.desktop.in.in.h:2
-#, fuzzy
 msgid "Panel Actions"
-msgstr "Paramétrage du panneau"
+msgstr "Actions Du Panneau"
 
 #: ../plugins/actions/actions.c:324
-#, fuzzy
 msgid "Select action type:"
-msgstr "Sélection de la commande"
+msgstr "Choisissez le type d'action :"
 
 #: ../plugins/actions/actions.c:333
-#, fuzzy
 msgid "Lock screen"
-msgstr "_Verrouiller l'écran"
+msgstr "Verrouiller l'écran"
 
 #: ../plugins/actions/actions.c:334
-#, fuzzy
 msgid "Quit + Lock screen"
-msgstr "_Verrouiller l'écran"
+msgstr "Quitter + Verrouiller l'écran"
 
 #: ../plugins/tasklist/tasklist.c:332
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
-#, fuzzy
 msgid "Task List"
-msgstr "Tâches"
+msgstr "Liste Des Tâches"
 
 #: ../plugins/tasklist/tasklist.c:345
 msgid "Show tasks from _all workspaces"
@@ -498,17 +491,14 @@ msgid "Show application _names"
 msgstr "Afficher le _nom des applications"
 
 #: ../plugins/tasklist/tasklist.c:369
-#, fuzzy
 msgid "Never group tasks"
-msgstr "Toujours re_grouper les tâches"
+msgstr "Jamais reggrouper les tâches"
 
 #: ../plugins/tasklist/tasklist.c:372
-#, fuzzy
 msgid "Automatically group tasks"
-msgstr "Toujours re_grouper les tâches"
+msgstr "Re_grouper automatiquement les tâches"
 
 #: ../plugins/tasklist/tasklist.c:375
-#, fuzzy
 msgid "Always group tasks"
 msgstr "Toujours re_grouper les tâches"
 
@@ -536,22 +526,20 @@ msgstr "Impossible d'activer le système de notification: %s"
 #: ../plugins/systray/systray.c:357
 #: ../plugins/systray/systray.desktop.in.in.h:2
 msgid "Status Area"
-msgstr ""
+msgstr "Région De Statut"
 
 #: ../plugins/systray/systray.c:370 ../plugins/clock/clock.c:442
 msgid "Show _frame"
-msgstr ""
+msgstr "Montrez l'_armature"
 
 #: ../plugins/iconbox/iconbox.c:760
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
-#, fuzzy
 msgid "Icon Box"
 msgstr "Paramétrage de la boite à icônes"
 
 #: ../plugins/iconbox/iconbox.c:774
-#, fuzzy
 msgid "Only show minimized applications"
-msgstr "Afficher le _nom des applications"
+msgstr "Montrez seulement les applications réduites au minimum"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -567,9 +555,8 @@ msgid "%A %d %B %Y"
 msgstr "%A, %d %B %Y"
 
 #: ../plugins/clock/clock.c:413 ../plugins/clock/clock.desktop.in.in.h:1
-#, fuzzy
 msgid "Clock"
-msgstr "Verrouiller"
+msgstr "Horloge"
 
 #: ../plugins/clock/clock.c:420
 msgid "Appearance"
@@ -590,20 +577,19 @@ msgstr "LED"
 
 #: ../plugins/clock/clock.c:450
 msgid "Clock Options"
-msgstr ""
+msgstr "Options De L'Horloge"
 
 #: ../plugins/clock/clock.c:460
 msgid "Use 24-_hour clock"
-msgstr ""
+msgstr "Utilisez 24 heure dans l'horloge"
 
 #: ../plugins/clock/clock.c:468
-#, fuzzy
 msgid "Show AM/PM"
-msgstr "AM/PM"
+msgstr "Montrer AM/PM"
 
 #: ../plugins/clock/clock.c:476
 msgid "Display seconds"
-msgstr ""
+msgstr "Montrer les secondes"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:1
 msgid "Launcher"
@@ -611,45 +597,40 @@ msgstr "Lanceur"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:2
 msgid "Program launcher with optional menu"
-msgstr ""
+msgstr "Lanceur de programme avec le menu facultatif"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
-#, fuzzy
 msgid "Test Plugin"
-msgstr "Lanceur"
+msgstr "Plugin Test"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
-msgstr ""
+msgstr "Ce plugin n'a aucun but"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
-msgstr ""
+msgstr "Ajoute un espace ou une ligne entre les éléments du panneau"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
-#, fuzzy
 msgid "Log out or lock the screen"
-msgstr "Verrouiller l'écran"
+msgstr "Déconnection ou verrouillage de l'écran"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
-#, fuzzy
 msgid "Show all running applications"
-msgstr "Afficher le _nom des applications"
+msgstr "Montrez toutes les applications courantes"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
-msgstr ""
+msgstr "Vue miniature des bureaux virtuels"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
-#, fuzzy
 msgid "Show notification icons"
-msgstr "Afficher le _nom des applications"
+msgstr "Montrez la notification des icônes"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
-#, fuzzy
 msgid "Show icons of all running applications"
-msgstr "Afficher le _nom des applications"
+msgstr "Montrez les icônes de toutes les applications courantes"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
-msgstr ""
+msgstr "Quelle heure est-il ?"
