--- a/po/es.po
+++ b/po/es.po
@@ -2,14 +2,15 @@
 # Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panelpackage.
 # Edscott Wilson García <edscott@xfce.org>, 2003-2004.
+# Rudy Godoy <rudy@stone-head.org>, 2005.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.25\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-10-29 16:58+0900\n"
-"PO-Revision-Date: 2005-08-18 01:07+0900\n"
-"Last-Translator: Edscott Wilson García <edscott@xfce.org>\n"
+"POT-Creation-Date: 2005-11-07 22:08+0900\n"
+"PO-Revision-Date: 2005-11-07 22:12+0900\n"
+"Last-Translator: Rudy Godoy <rudy@kernel-panik.org>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,114 +19,107 @@ msgstr ""
 #: ../libxfce4panel/xfce-panel-external-item.c:171
 #, c-format
 msgid "An item was unexpectedly removed: \"%s\"."
-msgstr ""
+msgstr "Se ha eliminado un elemento de forma inesperada: «%s»."
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:581
-#, fuzzy, c-format
+#, c-format
 msgid "Remove \"%s\"?"
-msgstr "_Eliminar"
+msgstr "¿Eliminar «%s»?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:586 ../panel/panel-app.c:597
 #: ../panel/panel-app.c:628 ../panel/panel-app.c:661
 #: ../panel/panel-settings.c:1613 ../plugins/launcher/launcher.c:314
 #: ../plugins/launcher/launcher.c:364
 msgid "Xfce Panel"
-msgstr "Panel Xfce"
+msgstr "Panel de Xfce"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:588
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
-msgstr ""
+msgstr "El elemento se elimará del panel y se perderá su configuración."
 
 #. configure, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:759
 #, c-format
 msgid "%s Properties"
-msgstr ""
+msgstr "Propiedades de %s"
 
 #. about item, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:778
 msgid "About"
-msgstr ""
+msgstr "Acerca de"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:799
-#, fuzzy
 msgid "Remove"
-msgstr "_Eliminar"
+msgstr "Eliminar"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:814
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:850
-#, fuzzy
 msgid "Panel"
-msgstr "Panel Xfce"
+msgstr "Panel"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:820 ../panel/panel.c:534
 msgid "Customize Panel"
-msgstr ""
+msgstr "Personalizar panel"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:837
-#, fuzzy
 msgid "Manage Panels"
-msgstr "Panel Xfce"
+msgstr "Gestionar paneles"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:850
-#, fuzzy, c-format
+#, c-format
 msgid "Remove %s"
-msgstr "_Eliminar"
+msgstr "Eliminar %s"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:867
 #: ../panel/panel-settings.c:412
-#, fuzzy
 msgid "New Panel"
-msgstr "Panel Xfce"
+msgstr "Nuevo panel"
 
 #: ../panel/panel.c:549 ../plugins/actions/actions.c:332
 msgid "Quit"
-msgstr ""
+msgstr "Salir"
 
 #: ../panel/panel.c:559
-#, fuzzy
 msgid "Restart"
-msgstr "_Recomenzar"
+msgstr "Reiniciar"
 
 #: ../panel/panel.c:573
-#, fuzzy
 msgid "About the Xfce Panel"
-msgstr "Panel Xfce"
+msgstr "Acerca del Panel de Xfce"
 
 #: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
-#, fuzzy, c-format
+#, c-format
 msgid "Could not open \"%s\" module"
-msgstr "No se pudo crear el elemento de panel \"%s\"."
+msgstr "No se pudo abrir el módulo «%s»."
 
 #: ../panel/panel-app.c:180
 msgid "Are you sure you want to exit?"
-msgstr "¿Está seguro de querer salir?"
+msgstr "¿Está seguro que quiere salir?"
 
 #: ../panel/panel-app.c:599
-#, fuzzy
 msgid "Exit Xfce Panel?"
-msgstr "Panel Xfce"
+msgstr "¿Salir del Panel de Xfce?"
 
 #: ../panel/panel-app.c:600
 msgid "You can't remove the last panel. Would you like to exit the program?"
-msgstr ""
+msgstr "No puede eliminar el último panel. ¿Desea salir del programa?"
 
 #: ../panel/panel-app.c:626
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr ""
+msgstr "¿Eliminar panel «%d»?"
 
 #: ../panel/panel-app.c:630
 msgid "The selected panel and all its items will be removed."
-msgstr ""
+msgstr "Se eliminará el panel elegido y todos sus elementos."
 
 #: ../panel/panel-app.c:669
 msgid "Developer"
 msgstr "Desarrollador"
 
 #: ../panel/main.c:46
-#, fuzzy, c-format
+#, c-format, fuzzy
 msgid ""
 "\n"
 " Xfce Panel %s\n"
@@ -137,9 +131,9 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-" El panel Xfce\n"
-" versión %s\n"
-" Parte del Entorno de Escritorio Xfce\n"
+" El panel de Xfce\n"
+"\n"
+" Parte del entorno de escritorio Xfce\n"
 " http://www.xfce.org\n"
 "\n"
 " Bajo licencia GNU GPL.\n"
@@ -151,6 +145,8 @@ msgid ""
 " Usage: %s [OPTIONS]\n"
 "\n"
 msgstr ""
+"Uso: %s [OPCIONES]\n"
+"\n"
 
 #. Only translate the descriptions, not the options itself
 #: ../panel/main.c:55
@@ -166,53 +162,58 @@ msgid ""
 " -a, --add       Add new items\n"
 "\n"
 msgstr ""
+" OPCIONES\n"
+" -h, --help      Muestra este mensaje y finaliza\n"
+" -v, --version   Muestra este mensaje y finaliza\n"
+" -c. --customize Muestra diálogo de configuración\n"
+" -s, --save      Guarda configuración de panel\n"
+" -r, --restart   Reinicia paneles\n"
+" -q, --quit      Finaliza la sesión\n"
+" -x, --exit      Finaliza los paneles\n"
+" -a, --add       Añade nuevos elementos\n"
 
 #: ../panel/panel-settings.c:331 ../panel/panel-settings.c:367
 #: ../panel/panel-settings.c:399
-#, fuzzy, c-format
+#, c-format
 msgid "Panel %d"
-msgstr "Panel Xfce"
+msgstr "Panel %d"
 
 #: ../panel/panel-settings.c:383
-#, fuzzy
 msgid "Select Panel"
-msgstr "Seleccionar archivo"
+msgstr "Elegir panel"
 
 #: ../panel/panel-settings.c:419
-#, fuzzy
 msgid "Remove Panel"
-msgstr "_Eliminar"
+msgstr "Eliminar panel"
 
 #: ../panel/panel-settings.c:708 ../panel/panel-settings.c:916
 msgid "Left"
-msgstr ""
+msgstr "Izquierda"
 
 #: ../panel/panel-settings.c:710 ../panel/panel-settings.c:918
 msgid "Right"
-msgstr ""
+msgstr "Derecha"
 
 #: ../panel/panel-settings.c:715 ../panel/panel-settings.c:923
 msgid "Top"
-msgstr ""
+msgstr "Superior"
 
 #: ../panel/panel-settings.c:717 ../panel/panel-settings.c:925
 msgid "Bottom"
-msgstr ""
+msgstr "Inferior"
 
 #. floating?
 #: ../panel/panel-settings.c:749
-#, fuzzy
 msgid "Panel Type"
-msgstr "Tamaño del panel:"
+msgstr "Tipo de panel"
 
 #: ../panel/panel-settings.c:758
-#, fuzzy
 msgid "Fixed Position"
-msgstr "Posición"
+msgstr "Posición fija"
 
 #: ../panel/panel-settings.c:760
 msgid "Freely Moveable"
-msgstr ""
+msgstr "Desplazable"
 
 #. position
 #: ../panel/panel-settings.c:766
@@ -221,17 +222,15 @@ msgstr "Posición"
 
 #: ../panel/panel-settings.c:850
 msgid "_Full Width"
-msgstr ""
+msgstr "_Todo el ancho"
 
 #: ../panel/panel-settings.c:859
-#, fuzzy
 msgid "Auto_hide"
-msgstr "Esconder automáticamente"
+msgstr "Ocultar automáticamente"
 
 #: ../panel/panel-settings.c:877
-#, fuzzy
 msgid "Orientation:"
-msgstr "Orientación del panel:"
+msgstr "Orientación:"
 
 #: ../panel/panel-settings.c:889
 msgid "Horizontal"
@@ -242,24 +241,20 @@ msgid "Vertical"
 msgstr "Vertical"
 
 #: ../panel/panel-settings.c:900
-#, fuzzy
 msgid "Handle Position:"
-msgstr "Posición"
+msgstr "Gestionar posición"
 
 #: ../panel/panel-settings.c:912
-#, fuzzy
 msgid "At both sides"
-msgstr "Esconder automáticamente"
+msgstr "A ambos lados"
 
 #: ../panel/panel-settings.c:942
-#, fuzzy
 msgid "Panel Properties"
-msgstr "Configuración del panel"
+msgstr "Propiedades del panel"
 
 #: ../panel/panel-settings.c:977
-#, fuzzy
 msgid "Monitor"
-msgstr "Editor"
+msgstr "Monitor"
 
 #. size
 #: ../panel/panel-settings.c:1059
@@ -288,54 +283,53 @@ msgstr "Completo"
 
 #: ../panel/panel-settings.c:1442
 msgid "Manage Panel Items"
-msgstr ""
+msgstr "Gestionar elementos del panel"
 
 #: ../panel/panel-settings.c:1463
 msgid ""
 "Drag items from the list to a panel or remove them by dragging them back to "
 "the list."
 msgstr ""
+"Arrastre elementos de la lista hacia un panel, o para eliminarlos,\n"
+"desde éste hacia la lista."
 
 #: ../panel/panel-settings.c:1481
 msgid "Avalaible Items"
-msgstr ""
+msgstr "Elementos disponibles"
 
 #: ../panel/panel-settings.c:1494
 msgid "Add To Selected Panel"
-msgstr ""
+msgstr "Añadir a panel elegido"
 
 #: ../panel/panel-settings.c:1662
 msgid "Panel Preferences"
-msgstr ""
+msgstr "Preferencias de panel"
 
 #: ../panel/panel-settings.c:1664
 msgid "Customize Panels"
-msgstr ""
+msgstr "Personalizar paneles"
 
 #: ../plugins/launcher/launcher.c:312 ../plugins/launcher/launcher.c:362
-#, fuzzy, c-format
+#, c-format
 msgid "Could not run \"%s\""
-msgstr "No se pudo crear el elemento de panel \"%s\"."
+msgstr "No se pudo ejecutar «%s»."
 
 #: ../plugins/launcher/launcher.c:560
 #: ../plugins/launcher/launcher-dialog.c:1121
-#, fuzzy
 msgid "New Item"
-msgstr "Añadir nuevo elemento"
+msgstr "Nuevo elemento"
 
 #: ../plugins/launcher/launcher.c:616 ../plugins/launcher/launcher.c:1131
-#, fuzzy
 msgid "This item has not yet been configured"
-msgstr "Este elemento no tiene opciones de configuración"
+msgstr "Todavía no se ha configurado este elemento"
 
 #: ../plugins/launcher/launcher.c:1130
-#, fuzzy
 msgid "New item"
-msgstr "Añadir nuevo elemento"
+msgstr "Nuevo elemento"
 
 #: ../plugins/launcher/launcher-dialog.c:78
 msgid "Default"
-msgstr "Por defecto"
+msgstr "Predeterminado"
 
 #: ../plugins/launcher/launcher-dialog.c:79
 msgid "Editor"
@@ -343,11 +337,11 @@ msgstr "Editor"
 
 #: ../plugins/launcher/launcher-dialog.c:80
 msgid "File management"
-msgstr "Administración de archivos"
+msgstr "Gestión de archivos"
 
 #: ../plugins/launcher/launcher-dialog.c:81
 msgid "Utilities"
-msgstr "Utilerías"
+msgstr "Herramientas"
 
 #: ../plugins/launcher/launcher-dialog.c:82
 msgid "Games"
@@ -386,47 +380,44 @@ msgid "Terminal"
 msgstr "Terminal"
 
 #: ../plugins/launcher/launcher-dialog.c:381
-#, fuzzy
 msgid "Select image file"
-msgstr "Seleccionar archivo"
+msgstr "Seleccionar fichero de imagen"
 
 #: ../plugins/launcher/launcher-dialog.c:426
 msgid "Select command"
-msgstr "Seleccionar comando"
+msgstr "Seleccionar orden"
 
 #: ../plugins/launcher/launcher-dialog.c:449
-#, fuzzy
 msgid "Name"
-msgstr "Juegos"
+msgstr "Nombre"
 
 #: ../plugins/launcher/launcher-dialog.c:467
-#, fuzzy
 msgid "Description"
-msgstr "Posición"
+msgstr "Descripción"
 
 #: ../plugins/launcher/launcher-dialog.c:522
 msgid "Other..."
-msgstr ""
+msgstr "Otro..."
 
 #: ../plugins/launcher/launcher-dialog.c:608
-#, fuzzy
 msgid "Command"
-msgstr "Comando:"
+msgstr "Orden"
 
 #: ../plugins/launcher/launcher-dialog.c:644
 msgid "Run in _terminal"
 msgstr "Ejecutar en _terminal"
 
 #: ../plugins/launcher/launcher-dialog.c:662
-#, fuzzy
 msgid "Use _startup notification"
-msgstr "Usar notificación de arranque"
+msgstr "U_sar notificación de arranque"
 
 #: ../plugins/launcher/launcher-dialog.c:1233
 msgid ""
 "The first item in the list is shown on the panel. Additional items will "
 "appear in a menu."
 msgstr ""
+"El primer elemento en la lista es mostrado en el panel. Los elementos\n"
+"adicionales aparecerán en un menú."
 
 #: ../plugins/launcher/launcher-dialog.c:1273
 #: ../plugins/separator/separator.c:241 ../plugins/actions/actions.c:295
@@ -434,16 +425,15 @@ msgstr ""
 #: ../plugins/systray/systray.c:345 ../plugins/iconbox/iconbox.c:748
 #: ../plugins/clock/clock.c:401
 msgid "Properties"
-msgstr ""
+msgstr "Propiedades"
 
 #: ../plugins/launcher/launcher-dialog.c:1282
-#, fuzzy
 msgid "Program Launcher"
-msgstr "Anexarle un menú al lanzador"
+msgstr "Lanzador de programas"
 
 #: ../plugins/launcher/launcher-dialog.c:1608
 msgid "Select file"
-msgstr "Seleccionar archivo"
+msgstr "Elegir archivo"
 
 #: ../plugins/separator/separator.c:253
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -451,61 +441,52 @@ msgid "Separator"
 msgstr "Separador"
 
 #: ../plugins/separator/separator.c:266
-#, fuzzy
 msgid "_Draw Separator"
-msgstr "Separador"
+msgstr "_Dibujar separador"
 
 #: ../plugins/separator/separator.c:275
 msgid "_Expand"
-msgstr ""
+msgstr "_Expandir"
 
 #: ../plugins/actions/actions.c:307
 #: ../plugins/actions/actions.desktop.in.in.h:2
-#, fuzzy
 msgid "Panel Actions"
-msgstr "Configuración del panel"
+msgstr "Acciones del panel"
 
 #: ../plugins/actions/actions.c:324
-#, fuzzy
 msgid "Select action type:"
-msgstr "Seleccionar comando"
+msgstr "Elegir tipo de acción:"
 
 #: ../plugins/actions/actions.c:333
-#, fuzzy
 msgid "Lock screen"
-msgstr "B_loquear pantalla"
+msgstr "Bloquear pantalla"
 
 #: ../plugins/actions/actions.c:334
-#, fuzzy
 msgid "Quit + Lock screen"
-msgstr "B_loquear pantalla"
+msgstr "Salir y bloquear pantalla"
 
 #: ../plugins/tasklist/tasklist.c:332
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
-#, fuzzy
 msgid "Task List"
 msgstr "Lista de tareas"
 
 #: ../plugins/tasklist/tasklist.c:345
 msgid "Show tasks from _all workspaces"
-msgstr "Mostrar tareas de todos los escritorios virtuales"
+msgstr "Mostrar t_areas de todos los escritorios virtuales"
 
 #: ../plugins/tasklist/tasklist.c:355
 msgid "Show application _names"
-msgstr "Mostrar nombres de aplicaciones"
+msgstr "Mostrar _nombres de aplicaciones"
 
 #: ../plugins/tasklist/tasklist.c:369
-#, fuzzy
 msgid "Never group tasks"
-msgstr "Siempre agrupar tareas"
+msgstr "No agrupar tareas"
 
 #: ../plugins/tasklist/tasklist.c:372
-#, fuzzy
 msgid "Automatically group tasks"
-msgstr "Siempre agrupar tareas"
+msgstr "Agrupar tareas automáticamente"
 
 #: ../plugins/tasklist/tasklist.c:375
-#, fuzzy
 msgid "Always group tasks"
 msgstr "Siempre agrupar tareas"
 
@@ -523,34 +504,30 @@ msgstr "Número de columnas"
 
 #: ../plugins/systray/systray.c:65
 msgid "There is already a system tray running on this screen"
-msgstr "Ya hay una bandeja de iconos funcionando en esta pantalla"
+msgstr "Ya existe una bandeja de iconos ejecutandose en esta pantalla"
 
 #: ../plugins/systray/systray.c:71
 #, c-format
 msgid "Unable to register system tray: %s"
-msgstr "Es imposible registrar la bandeja de iconos: %s"
+msgstr "No se pudo registrar la bandeja de iconos: %s"
 
 #: ../plugins/systray/systray.c:357
 #: ../plugins/systray/systray.desktop.in.in.h:2
-#, fuzzy
 msgid "Status Area"
-msgstr "Área de información"
+msgstr "Área de estado"
 
 #: ../plugins/systray/systray.c:370 ../plugins/clock/clock.c:442
-#, fuzzy
 msgid "Show _frame"
-msgstr "Mostrar tiempo"
+msgstr "Mostrar _cuadro"
 
 #: ../plugins/iconbox/iconbox.c:760
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
-#, fuzzy
 msgid "Icon Box"
-msgstr "Caja de íconos"
+msgstr "Caja de iconos"
 
 #: ../plugins/iconbox/iconbox.c:774
-#, fuzzy
 msgid "Only show minimized applications"
-msgstr "Mostrar únicamente tareas minimizadas"
+msgstr "Mostrar únicamente aplicaciones minimizadas"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -565,13 +542,12 @@ msgid "%A %d %B %Y"
 msgstr "%A %d %B %Y"
 
 #: ../plugins/clock/clock.c:413 ../plugins/clock/clock.desktop.in.in.h:1
-#, fuzzy
 msgid "Clock"
-msgstr "Bloquear"
+msgstr "Reloj"
 
 #: ../plugins/clock/clock.c:420
 msgid "Appearance"
-msgstr "Apariencia"
+msgstr "Aspecto"
 
 #. Keep order in sync with XfceClockMode
 #: ../plugins/clock/clock.c:435
@@ -588,20 +564,19 @@ msgstr "LED"
 
 #: ../plugins/clock/clock.c:450
 msgid "Clock Options"
-msgstr ""
+msgstr "Opciones de reloj"
 
 #: ../plugins/clock/clock.c:460
 msgid "Use 24-_hour clock"
-msgstr ""
+msgstr "Usar reloj de 24 _horas"
 
 #: ../plugins/clock/clock.c:468
-#, fuzzy
 msgid "Show AM/PM"
-msgstr "AM/PM"
+msgstr "Mostrar AM/PM"
 
 #: ../plugins/clock/clock.c:476
 msgid "Display seconds"
-msgstr ""
+msgstr "Mostrar segundos"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:1
 msgid "Launcher"
@@ -609,45 +584,40 @@ msgstr "Lanzador"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:2
 msgid "Program launcher with optional menu"
-msgstr ""
+msgstr "Lanzador de programa con menú opcional"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
-#, fuzzy
 msgid "Test Plugin"
-msgstr "Lanzador"
+msgstr "Complemento de prueba"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
-msgstr ""
+msgstr "Este complemento no tiene propósito"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
-msgstr ""
+msgstr "Añade un espacio o una línea entre elementos del panel"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
-#, fuzzy
 msgid "Log out or lock the screen"
-msgstr "Bloquear la pantalla"
+msgstr "Salir y bloquear la pantalla"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
-#, fuzzy
 msgid "Show all running applications"
-msgstr "Mostrar únicamente tareas minimizadas"
+msgstr "Mostrar todas las aplicaciones en ejecución"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
-msgstr ""
+msgstr "Vista en miniatura de todos los escritorios virtuales"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
-#, fuzzy
 msgid "Show notification icons"
-msgstr "Mostrar íconos de notificación"
+msgstr "Mostrar iconos de notificación"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
-#, fuzzy
 msgid "Show icons of all running applications"
-msgstr "Mostrar únicamente tareas minimizadas"
+msgstr "Mostrar iconos de todas las aplicaciones en ejecución"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
-msgstr ""
+msgstr "¿Qué hora es?"
