Updated Japanese translations.
(Old svn revision: 18958)

--- a/po/ja.po
+++ b/po/ja.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.25\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-11-28 19:08+0900\n"
-"PO-Revision-Date: 2005-10-21 20:54+0900\n"
+"PO-Revision-Date: 2005-11-28 22:01+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -43,7 +43,7 @@ msgstr "パネルからアイテムが削除されると、その設定も失わ
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:759
 #, c-format
 msgid "%s Properties"
-msgstr "%s のプロパティ"
+msgstr "%sのプロパティ"
 
 #. about item, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:778
@@ -583,7 +583,7 @@ msgstr "ランチャー"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:2
 msgid "Program launcher with optional menu"
-msgstr "オプションでメニューが付くプログラムランチャーです"
+msgstr "オプションでメニューが付くプログラムランチャーです。"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
 msgid "Test Plugin"
@@ -591,35 +591,32 @@ msgstr "テストプラグイン"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
-msgstr "このプログラムはテスト用です"
+msgstr "このプログラムはテスト用です。"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
-msgstr "パネルアイテムの間にすき間か棒線を追加します"
+msgstr "パネルのアイテム間に隙間か棒線を追加します。"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Log out or lock the screen"
-msgstr "ログアウトまたは画面をロックします"
+msgstr "ログアウトまたは画面をロックします。"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Show all running applications"
-msgstr "実行している全てのアプリケーションを表示します"
+msgstr "実行している全てのアプリケーションを表示します。"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
-msgstr "全ての仮想デスクトップのミニチュアを表示します"
+msgstr "全ての仮想デスクトップのミニチュアを表示します。"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
 msgid "Show notification icons"
-msgstr "通知アイコンを表示します"
+msgstr "通知アイコンを表示します。"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
 msgid "Show icons of all running applications"
-msgstr "実行している全てのアプリケーションを表示します"
+msgstr "実行している全てのアプリケーションを表示します。"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr "今何時ですか？"
-
-#~ msgid "Are you sure you want to exit?"
-#~ msgstr "本当に終了しても宜しいですか？"
