I wish I would have done this before 4.2.3 :(  * Fix issues with saving a panel on a second screen (bug #1133)  * Use a timeout to save configuration (bug #1178)
(Old svn revision: 19013)

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 NEWS for xfce4-panel
 ====================
 
+4.2.3.1
+=======
+- Fix issues with saving a panel on a second screen (bug #1133) (Jasper)
+- Use a timeout to save configuration (bug #1178) (Jasper)
+
 4.2.3
 =====
 - Updated translations (Jean-François, Daichi)
