* Fix positioning bug when moving an item to the right on the same panel  * update po files
(Old svn revision: 19084)

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,17 @@
 NEWS for xfce4-panel
 ====================
 
+4.3.x
+=====
+- Major rewrite of the panel
+
+- New plugin API supporting out-of-process plugins
+
+- Support for multiple panels
+
+- Xinerama and multi-head support
+
+
 4.1.99.3 (4.2-RC3)
 ==================
 - Fix type mismatch when writing backup files. Fixes infinite loop on non-x86.
