--- a/po/nl.po
+++ b/po/nl.po
@@ -5,7 +5,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.25\n"
+"Project-Id-Version: xfce4-panel 4.3.27\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-12-20 10:36+0100\n"
 "PO-Revision-Date: 2005-12-20 10:37+0100\n"
@@ -13,7 +13,7 @@ msgstr ""
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: ../libxfce4panel/xfce-panel-external-item.c:171
 #, c-format
